@@ -31,12 +31,13 @@ define( function( require ) {
 
     // Dropper above the beaker
     var yDropper = 210;
-    thisModel.dropper = new Dropper( Solute.CUSTOM,
+    thisModel.dropper = new Dropper( Solute.createCustom( 7 ),
       new Vector2( thisModel.beaker.location.x, yDropper ),
       new Bounds2( thisModel.beaker.left + 40, yDropper, thisModel.beaker.right - 40, yDropper ) );
 
     // Solution in the beaker
-    thisModel.solution = new Solution( thisModel.dropper.soluteProperty, 0, thisModel.water, 0, thisModel.beaker.volume );
+    thisModel.solution = new Solution( thisModel.dropper.soluteProperty, 0, thisModel.water, 0, thisModel.beaker.volume,
+      { emptyWhenSoluteChanges: false } );
 
     // Drain faucet at the beaker's bottom-left.
     thisModel.drainFaucet = new Faucet( new Vector2( thisModel.beaker.left - 75, thisModel.beaker.location.y + 43 ), thisModel.beaker.left,
